syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";
option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service password {
   rpc HashPass(HashPassword) returns(HashPasswordResponse);
   rpc ValidPass(ValidatePassword) returns (google.protobuf.BoolValue);
}

message HashPassword {
   int32 userId = 1;
   string password = 2;
 }

message ValidatePassword{
string password = 1;
string hashedPassword = 2;
string salt = 3;
}
message HashPasswordResponse {
 int32 userId = 1;
 string hashedPassword = 2;
 string salt = 3;
 }
